# CypherLite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.json
.claude/agent-memory/manager-docs/: MEMORY.md
.claude/agent-memory/manager-tdd/: MEMORY.md
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.github/workflows/: ci.yml  docs.yml  release.yml
.moai/: manifest.json  status_line.sh
.moai/config/sections/: git-strategy.yaml  project.yaml  user.yaml
.moai/docs/: sync-report-20260310T032638.md
.moai/project/: product.md  structure.md  tech.md
.moai/project/codemaps/: overview.md
.moai/specs/SPEC-DB-001/: plan.md  progress.md  spec.md
.moai/specs/SPEC-DB-002/: acceptance.md  architecture-draft.md  plan.md  progress.md  quality-verification.md  requirements-draft.md  research.md  spec.md
.moai/specs/SPEC-DB-003/: acceptance.md  plan.md  progress.md  research.md  spec.md
.moai/specs/SPEC-DB-004/: acceptance.md  plan.md  progress.md  research.md  spec.md
.moai/specs/SPEC-DB-005/: plan.md  progress.md  spec.md
.moai/specs/SPEC-DB-006/: progress.md  spec.md
.moai/specs/SPEC-DB-007/: progress.md  research.md  spec.md
.moai/specs/SPEC-DB-008/: acceptance.md  plan.md  progress.md  spec.md
.moai/specs/SPEC-DOC-001/: acceptance.md  plan.md  progress.md  spec.md
.moai/specs/SPEC-EXAMPLE-001/: research.md  spec.md
.moai/specs/SPEC-FFI-001/: acceptance.md  plan.md  progress.md  spec.md  (+1 more)
crates/cypherlite-core/: Cargo.toml
crates/cypherlite-core/src/: config.rs  error.rs  lib.rs  traits.rs  trigger_types.rs  types.rs
crates/cypherlite-core/src/plugin/: mod.rs
crates/cypherlite-core/tests/: plugin_test.rs
crates/cypherlite-ffi/: Cargo.toml  cbindgen.toml
crates/cypherlite-ffi/include/: cypherlite.h
crates/cypherlite-ffi/src/: db.rs  error.rs  lib.rs  query.rs  result.rs  transaction.rs  value.rs
crates/cypherlite-node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  lib.d.ts  lib.js  package.json  vitest.config.mjs
crates/cypherlite-node/__test__/: index.spec.mjs
crates/cypherlite-node/src/: database.rs  error.rs  lib.rs  result.rs  transaction.rs  value.rs
crates/cypherlite-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/cypherlite-python/python/cypherlite/: __init__.py
crates/cypherlite-python/src/: database.rs  error.rs  lib.rs  result.rs  transaction.rs  types.rs  value.rs
crates/cypherlite-python/tests/: test_cypherlite.py
crates/cypherlite-query/: Cargo.toml
crates/cypherlite-query/benches/: hypergraph.rs  inline_filter.rs  query_bench.rs  streaming_bench.rs  subgraph.rs  temporal_edge.rs
crates/cypherlite-query/examples/: basic_crud.rs  knowledge_graph.rs
crates/cypherlite-query/src/: lib.rs
crates/cypherlite-query/src/api/: mod.rs
crates/cypherlite-query/src/executor/: eval.rs  mod.rs
crates/cypherlite-query/src/executor/operators/: aggregate.rs  create.rs  delete.rs  expand.rs  filter.rs  hyperedge_scan.rs  index_scan.rs  limit.rs  merge.rs  mod.rs  node_scan.rs  optional_expand.rs  project.rs  set_props.rs  sort.rs  subgraph_scan.rs  temporal_filter.rs  temporal_scan.rs  unwind.rs  var_length_expand.rs  with.rs
crates/cypherlite-query/src/lexer/: mod.rs
crates/cypherlite-query/src/parser/: ast.rs  clause.rs  expression.rs  mod.rs  pattern.rs
crates/cypherlite-query/src/planner/: mod.rs  optimize.rs
crates/cypherlite-query/src/semantic/: mod.rs  symbol_table.rs
crates/cypherlite-query/tests/: hypergraph.rs  index_ddl.rs  inline_property_filter.rs  merge_clause.rs  optional_match.rs  plugin_function_test.rs  plugin_index_test.rs  plugin_serializer_test.rs  plugin_trigger_test.rs  proptest_inline_filter.rs  proptest_phase3.rs  proptest_query.proptest-regressions  proptest_query.rs  proptest_subgraph.rs  proptest_temporal.rs  proptest_temporal_edge.rs  proptest_var_length.rs  query_optimization.rs  subgraph.rs  temporal_edge.rs  temporal_query.rs  timestamp_tracking.rs  unwind_clause.rs  var_length_paths.rs  version_storage.rs  with_clause.rs
crates/cypherlite-storage/: Cargo.toml
crates/cypherlite-storage/benches/: concurrent_bench.rs  memory_bench.rs  storage_bench.rs
crates/cypherlite-storage/src/: lib.rs
crates/cypherlite-storage/src/btree/: edge_store.rs  mod.rs  node_store.rs  property_store.rs
crates/cypherlite-storage/src/catalog/: mod.rs
crates/cypherlite-storage/src/hyperedge/: mod.rs  reverse_index.rs
crates/cypherlite-storage/src/index/: edge_index.rs  mod.rs
crates/cypherlite-storage/src/page/: buffer_pool.rs  mod.rs  page_manager.rs  record_serialization.rs
crates/cypherlite-storage/src/subgraph/: membership.rs  mod.rs
crates/cypherlite-storage/src/transaction/: mod.rs  mvcc.rs
crates/cypherlite-storage/src/version/: mod.rs
crates/cypherlite-storage/src/wal/: checkpoint.rs  mod.rs  reader.rs  recovery.rs  writer.rs
crates/cypherlite-storage/tests/: acid_compliance.rs  concurrency.rs  crud_operations.rs  proptest_hypergraph.rs  proptest_storage.rs
docs/: 00_master_overview.md  INDEX.md
docs-site/: next.config.mjs  package-lock.json  package.json  theme.config.tsx
docs-site/public/: index.html
docs-site/styles/: globals.css
docs/design/: 01_core_architecture.md  02_storage_engine.md  03_query_engine.md  04_plugin_architecture.md  05_temporal_hypergraph_roadmap.md
docs/i18n/: README.ar.md  README.bn.md  README.es.md  README.fr.md  README.hi.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md  TRANSLATING.md
docs/research/: 01_existing_technologies.md  02_cypher_rdf_temporal.md  03_graphrag_agent_usecases.md
examples/: go_quickstart.go  node_quickstart.js  python_quickstart.py
(+148 files in other folders)
