[package]
name = "cypherlite-core"
version = "1.2.3"
edition = "2021"
rust-version = "1.84"
description = "Core types, traits, and error handling for CypherLite graph database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Epsilondelta-ai/CypherLite"
homepage = "https://github.com/Epsilondelta-ai/CypherLite"
keywords = ["graph", "database", "embedded", "cypher", "property-graph"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[features]
default = ["temporal-core"]
temporal-core = []
temporal-edge = ["temporal-core"]
subgraph = ["temporal-edge"]
hypergraph = ["subgraph"]
full-temporal = ["hypergraph"]
plugin = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
proptest = "1"
