[package]
name = "cypherlite-ffi"
version = "1.2.1"
edition = "2021"
rust-version = "1.84"
description = "C ABI foreign function interface bindings for CypherLite graph database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Epsilondelta-ai/CypherLite"
homepage = "https://github.com/Epsilondelta-ai/CypherLite"
keywords = ["ffi", "c-abi", "bindings", "graph-database", "embedded"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-query/temporal-core", "cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-query/temporal-edge", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-query/subgraph", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-query/hypergraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-query/full-temporal", "cypherlite-core/full-temporal"]
plugin = ["cypherlite-query/plugin", "cypherlite-core/plugin"]

[dependencies]
cypherlite-query = { version = "1.2.1", path = "../cypherlite-query" }
cypherlite-core = { version = "1.2.1", path = "../cypherlite-core" }
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3"
