[package]
name = "cypherlite-node"
version = "1.0.0"
edition = "2021"
rust-version = "1.84"
description = "Node.js bindings for CypherLite embedded graph database via napi-rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-query/temporal-core", "cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-query/temporal-edge", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-query/subgraph", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-query/hypergraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-query/full-temporal", "cypherlite-core/full-temporal"]
plugin = ["cypherlite-query/plugin", "cypherlite-core/plugin"]

[dependencies]
napi = { version = "2", features = ["napi9"] }
napi-derive = "2"
cypherlite-query = { path = "../cypherlite-query" }
cypherlite-core = { path = "../cypherlite-core" }

[build-dependencies]
napi-build = "2"
