[package]
name = "cypherlite-node"
version = "2.0.1"
edition = "2021"
rust-version = "1.84"
description = "Node.js bindings for CypherLite embedded graph database via napi-rs"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-query/temporal-core", "cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-query/temporal-edge", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-query/subgraph", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-query/hypergraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-query/full-temporal", "cypherlite-core/full-temporal"]
plugin = ["cypherlite-query/plugin", "cypherlite-core/plugin"]

[dependencies]
napi = { version = "2", features = ["napi9"] }
napi-derive = "2"
cypherlite-query = { version = "2.0.1", path = "../cypherlite-query" }
cypherlite-core = { version = "2.0.1", path = "../cypherlite-core" }

[build-dependencies]
napi-build = "2"
