[package]
name = "cypherlite-python"
version = "1.2.2"
edition = "2021"
rust-version = "1.84"
description = "Python bindings for CypherLite embedded graph database via PyO3"
publish = false

[lib]
name = "_cypherlite"
crate-type = ["cdylib"]

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-query/temporal-core", "cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-query/temporal-edge", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-query/subgraph", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-query/hypergraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-query/full-temporal", "cypherlite-core/full-temporal"]
plugin = ["cypherlite-query/plugin", "cypherlite-core/plugin"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py38", "extension-module"] }
cypherlite-query = { version = "1.2.2", path = "../cypherlite-query" }
cypherlite-core = { version = "1.2.2", path = "../cypherlite-core" }

[dev-dependencies]
tempfile = "3"
