[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cypherlite"
description = "Lightweight embedded graph database with Cypher query support"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
keywords = ["graph", "database", "cypher", "embedded", "property-graph"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Epsilondelta-ai/CypherLite"
Repository = "https://github.com/Epsilondelta-ai/CypherLite"
Documentation = "https://epsilondelta-ai.github.io/CypherLite/en/"
"Bug Tracker" = "https://github.com/Epsilondelta-ai/CypherLite/issues"

[tool.maturin]
python-source = "python"
module-name = "cypherlite._cypherlite"
features = ["pyo3/extension-module"]
