[package]
name = "cypherlite-query"
version = "0.7.0"
edition = "2021"
rust-version = "1.84"

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-core/temporal-core", "cypherlite-storage/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-core/temporal-edge", "cypherlite-storage/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-core/subgraph", "cypherlite-storage/subgraph"]
hypergraph = ["subgraph", "cypherlite-core/hypergraph", "cypherlite-storage/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-core/full-temporal", "cypherlite-storage/full-temporal"]

[dependencies]
cypherlite-core    = { path = "../cypherlite-core" }
cypherlite-storage = { path = "../cypherlite-storage" }
logos              = "0.14"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "temporal_edge"
harness = false

[[bench]]
name = "subgraph"
harness = false
required-features = ["subgraph"]

[[bench]]
name = "hypergraph"
harness = false
required-features = ["hypergraph"]
