[package]
name = "cypherlite-query"
version = "1.2.5"
edition = "2021"
rust-version = "1.84"
description = "Cypher query engine with parser, planner, and executor for CypherLite"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Epsilondelta-ai/CypherLite"
homepage = "https://github.com/Epsilondelta-ai/CypherLite"
keywords = ["cypher", "query-engine", "graph-database", "parser", "planner"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-core/temporal-core", "cypherlite-storage/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-core/temporal-edge", "cypherlite-storage/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-core/subgraph", "cypherlite-storage/subgraph"]
hypergraph = ["subgraph", "cypherlite-core/hypergraph", "cypherlite-storage/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-core/full-temporal", "cypherlite-storage/full-temporal"]
plugin = ["cypherlite-core/plugin", "cypherlite-storage/plugin"]

[dependencies]
cypherlite-core    = { version = "1.2.5", path = "../cypherlite-core" }
cypherlite-storage = { version = "1.2.5", path = "../cypherlite-storage" }
logos              = "0.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "temporal_edge"
harness = false

[[bench]]
name = "subgraph"
harness = false
required-features = ["subgraph"]

[[bench]]
name = "hypergraph"
harness = false
required-features = ["hypergraph"]

[[bench]]
name = "inline_filter"
harness = false

[[bench]]
name = "streaming_bench"
harness = false
