[package]
name = "cypherlite-storage"
version = "0.7.0"
edition = "2021"
rust-version = "1.84"

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-core/full-temporal"]

[dependencies]
cypherlite-core = { path = "../cypherlite-core" }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6"
bincode = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "storage_bench"
harness = false
