[package]
name = "cypherlite-storage"
version = "1.2.6"
edition = "2021"
rust-version = "1.84"
description = "Storage engine with WAL, B+Tree indexing, and ACID transactions for CypherLite"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Epsilondelta-ai/CypherLite"
homepage = "https://github.com/Epsilondelta-ai/CypherLite"
keywords = ["storage", "wal", "btree", "acid", "embedded-database"]
categories = ["database-implementations", "data-structures"]
readme = "../../README.md"

[features]
default = ["temporal-core"]
temporal-core = ["cypherlite-core/temporal-core"]
temporal-edge = ["temporal-core", "cypherlite-core/temporal-edge"]
subgraph = ["temporal-edge", "cypherlite-core/subgraph"]
hypergraph = ["subgraph", "cypherlite-core/hypergraph"]
full-temporal = ["hypergraph", "cypherlite-core/full-temporal"]
plugin = ["cypherlite-core/plugin"]

[dependencies]
cypherlite-core = { version = "1.2.6", path = "../cypherlite-core" }
parking_lot = "0.12"
bincode = "1"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "concurrent_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false
